jupyterhub/jupyterhub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: jupyterhub
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: / #caminho escolhido para sua aplicação, se voce mudar aqui, tem que mudar o arquivo values tambem.
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
